2016-09-21  Rob Crittenden <rcritten@redhat.com>
    * Check the NSS database directory permissions as well as the files
      inside it for read access on startup.

2016-09-12  Rob Crittenden <rcritten@redhat.com>
    * Add in simple aliases for ciphers to fix those that
      don't follow the pattern (dhe_rsa_aes_128_sha256,
      dhe_rsa_aes_256_sha256) and those with typos
      (camelia_128_sha, camelia_256_sha)

2016-08-10  Rob Crittenden <rcritten@redhat.com>
    * Fix semaphore leak

2016-06-28  Rob Crittenden <rcritten@redhat.com>
    * Don't set remote user in fixup hook
    * Drop SSLv2 tests because it is completely disabled now

2016-04-15  Rob Crittenden <rcritten@redhat.com>
    * Become 1.0.14

2016-03-31  Rob Crittenden <rcritten@redhat.com>
    * Created valgrind suppression files to ease debugging

2016-03-30  Rob Crittenden <rcritten@redhat.com>
    * Implement SSL_PPTYPE_FILTER to call executables to get
      the key password pins. Can be used to prompt with systemd.

2016-03-30  Vitezslav Cizek <vcizek@suse.com>
    * Improvements to migrate.pl

2016-03-17  Rob Crittenden <rcritten@redhat.com>
    * OpenSSL ciphers stopped parsing at +, CVE-2016-3099

2016-03-04  Rob Crittenden <rcritten@redhat.com>

    * Fix a number of issues discovered by clang-analyzer
    * Become 1.0.13

2016-03-02  Rob Crittenden <rcritten@redhat.com>

    * Extract SAN from server/client certificates into env
    * Fix memory leak when renegotiating a cipher

2016-02-29  Rob Crittenden <rcritten@redhat.com>

    * Fix test for DH cipher directive
    * Check for test and netstat before trying to use them
    * Don't ignore NSSProtocol when NSSFIPS is enabled
      Based on patch by Matthew Harmsen <mharmsen@redhat.com>

2016-02-24  Rob Crittenden <rcritten@redhat.com>

    * Use proper shell syntax to avoid creating /0
    
2016-02-15  Rob Crittenden <rcritten@redhat.com>

    * tests: Centralize the openssl ciphers flags when comparing
