@@ -325,6 +325,10 @@ struct SSLSrvConfigRec {
     const char      *ocsp_url;
     const char      *ocsp_name;
     BOOL             ocsp;
+    int              ocsp_timeout;
+    int              ocsp_cache_size;
+    int              ocsp_min_cache_entry_duration;
+    int              ocsp_max_cache_entry_duration;
     BOOL             enabled;
     BOOL             sni;
     BOOL             strict_sni_vhost_check;
@@ -398,6 +402,10 @@ const char *nss_cmd_NSSSNI(cmd_parms *, void *, int);
 const char *nss_cmd_NSSStrictSNIVHostCheck(cmd_parms *, void *, int);
 const char *nss_cmd_NSSEngine(cmd_parms *, void *, int);
 const char *nss_cmd_NSSOCSP(cmd_parms *, void *, int);
+const char *nss_cmd_NSSOCSPTimeout(cmd_parms *, void *, const char *arg);
+const char *nss_cmd_NSSOCSPCacheSize(cmd_parms *, void *, const char *arg);
+const char *nss_cmd_NSSOCSPMinCacheEntryDuration(cmd_parms *, void *, const char *arg);
+const char *nss_cmd_NSSOCSPMaxCacheEntryDuration(cmd_parms *, void *, const char *arg);
 const char *nss_cmd_NSSOCSPDefaultResponder(cmd_parms *, void *, int);
 const char *nss_cmd_NSSOCSPDefaultURL(cmd_parms *, void *dcfg, const char *arg);
 const char *nss_cmd_NSSOCSPDefaultName(cmd_parms *, void *, const char *arg);
